<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_analyze"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/tab_analyze" />
    <item
        android:id="@+id/nav_health"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/tab_health" />
    <item
        android:id="@+id/nav_assistant"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/tab_assistant" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/tab_profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/tab_settings" />
</menu>



